--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <label class="field">
             <span class="label">Email</span>
             <input id="loginEmail" name="email" type="email"
-                   autocomplete="email" required placeholder="contoh: kamu@email.com" />
+                   autocomplete="email" required placeholder="contoh: jihan@al.com" />
           </label>
 
           <label class="field">
@@ -83,7 +83,7 @@
           <label class="field">
             <span class="label">Email</span>
             <input id="regEmail" name="email" type="email"
-                   autocomplete="email" required placeholder="contoh: kamu@email.com" />
+                   autocomplete="email" required placeholder="contoh: jihan@al.com" />
           </label>
 
           <label class="field">
@@ -352,3 +352,4 @@
   <script type="module" src="app.js"></script>
 </body>
 </html>
+
