--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             <article class="card">
               <header class="card-head">
                 <h4 class="card-title">2) Sunnah (Uswatun Hasanah)</h4>
-                <p class="card-desc">Seberapa konsisten menjalankan amalan sunnah kita?</p>
+                <p class="card-desc"> Seberapa konsisten menjalankan amalan-amalan sunnah kita?</p>
               </header>
               <label class="field">
                 <span class="label">Jawaban Anda</span>
@@ -352,5 +352,6 @@
   <script type="module" src="app.js"></script>
 </body>
 </html>
+
 
 
